--- a/task_1_Secure_login/secure_login/templates/login.html
+++ b/task_1_Secure_login/secure_login/templates/login.html
@@ -38,6 +38,7 @@
                                 <button class="myform-btn" type="submit">Login</button>
                             </div>
                         </form>
+                        <a href="{% url 'signup' %}" class="forgot">Need to signup?</a>
                     </div>
                 </div>
             </div>
