--- a/task_1_Secure_login/secure_login/templates/signup.html
+++ b/task_1_Secure_login/secure_login/templates/signup.html
@@ -1,10 +1,36 @@
-<h1>Signup</h1>
-<form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Signup</button>
-    <a href="{% url 'login' %}">Already have account?</a>
-    <br>
-    <br>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>Signup</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'css/signup.css' %}">
+</head>
 
-</form>
+<body style="background: #214a80;">
+    <div class="login-dark" style="height: 695px;">
+        <form method="POST">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="id_email">Email</label>
+                <input class="form-control" type="username" id="username" name="username" placeholder="Username">
+            </div>
+            <div class="form-group">
+                <label for="id_password">Password</label>
+                <input class="form-control" type="password" id="id_password1" name="password1" placeholder="Password">
+            </div>
+            <div class="form-group">
+                <label for="id_password">Password</label>
+                <input class="form-control" type="password" id="id_password2" name="password2" placeholder="Confirm Password">
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Signup</button>
+            <a href="{% url 'login' %}" class="forgot">Already have an account?</a>
+        </form>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
