--- a/task_1_Secure_login/secure_login/templates/users_reservations.html
+++ b/task_1_Secure_login/secure_login/templates/users_reservations.html
@@ -1,14 +1,52 @@
-<h3>Your current requests are: </h3>
-
-{% for equipment in booked_equipments %}
-
-<li><b>Equipment: </b>{{ equipment }} <b>Type: </b>{{equipment.equipment_id.euipment_type}}</li>
-<a href="/cancel_request/{{ equipment.id }}">Cancel</a>
-
-<br>
-{% endfor %}
-
-
-<h3>You can see your Historical Bookings here: </h3>
-
-<a href="{% url 'historical_bookings' %}">Here</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Your Requests</title>
+    <style>
+        body {
+            background-color: #f0f0f0;
+            font-family: Arial, sans-serif;
+            color: #333;
+            padding: 20px;
+        }
+        .container {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            margin-top: 20px;
+        }
+        .equipment-item {
+            margin-bottom: 10px;
+        }
+        .equipment-item b {
+            font-weight: bold;
+        }
+        .cancel-link {
+            color: #c00;
+            text-decoration: none;
+            margin-left: 10px;
+        }
+        .cancel-link:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+<div class="container">
+    <h3>Your current requests are:</h3>
+    <ul>
+        {% for equipment in booked_equipments %}
+        <li class="equipment-item">
+            <b>Equipment:</b> {{ equipment }} <b>Type:</b> {{ equipment.equipment_id.euipment_type }}
+            <a href="/cancel_request/{{ equipment.id }}" class="cancel-link">Cancel</a>
+        </li>
+        {% endfor %}
+    </ul>
+    <h3>You can see your Historical Bookings here:</h3>
+    <a href="{% url 'historical_bookings' %}">Here</a>
+</div>
+</body>
+</html>
